# rust-fullstack-sample

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: config.rs  handler.rs  main.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: main.rs
