[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
axum = "0.5.3"
envy = "0.4.2"
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
